--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -24,7 +24,7 @@
 /* Custom Styles */
 @layer components {
     * {
-        @apply transition-all duration-300 ease-in-out delay-100;
+        @apply transition duration-300 ease-in-out delay-100;
     }
 
     body {
@@ -77,5 +77,10 @@
 
     .editor-sidebar-header {
         @apply font-sans font-bold text-sm text-left text-gray-50;
+    }
+
+    .suggest-widget {
+        display: none !important;
+        visibility: hidden !important;
     }
 }
