✨ add current file selection display in workspace viewr

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1585,6 +1585,11 @@ input::placeholder {
   background-color: rgb(9 0 31 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 4 38 / var(--tw-bg-opacity));
+}
+
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1600,6 +1605,10 @@ input::placeholder {
 
 .hover\:opacity-80:hover {
   opacity: 0.8;
+}
+
+.hover\:opacity-90:hover {
+  opacity: 0.9;
 }
 
 .focus\:border-primary:focus {
