--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -867,6 +867,14 @@ input::placeholder {
   margin-bottom: 1.5rem;
 }
 
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+
+.-mr-3 {
+  margin-right: -0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -1385,6 +1393,10 @@ input::placeholder {
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-left {
