--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1113,6 +1113,35 @@ input::placeholder {
   flex-grow: 1;
 }
 
+@-webkit-keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(12px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(12px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in-up {
+  -webkit-animation: fade-in-up 700ms ease-in-out 300ms forwards;
+          animation: fade-in-up 700ms ease-in-out 300ms forwards;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -1256,10 +1285,6 @@ input::placeholder {
   border-width: 2px;
 }
 
-.border-t-2 {
-  border-top-width: 2px;
-}
-
 .border-b {
   border-bottom-width: 1px;
 }
@@ -1313,11 +1338,6 @@ input::placeholder {
   --tw-border-opacity: 0;
 }
 
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 9 49 / var(--tw-bg-opacity));
-}
-
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(9 0 31 / var(--tw-bg-opacity));
@@ -1340,6 +1360,11 @@ input::placeholder {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 9 49 / var(--tw-bg-opacity));
 }
 
 .bg-primary {
@@ -1590,6 +1615,10 @@ input::placeholder {
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .opacity-20 {
